resources/content/docs/2.x/dark-mode/vite.mdx
---
title: Vite
description: Got a Vite project? Let's flip the switch to dark mode and get that cool, sleek look in a snap. Here’s how to do it.
order: 1
published: true
---

## Theme Provider
First, you need to create a provider called `theme-provider.tsx` in your components folder.

<PlainCode title='theme-provider.tsx' lang="tsx" code={`type Theme = "dark" | "light" | "system"

  type ThemeProviderProps = {
    children: React.ReactNode
    defaultTheme?: Theme
    storageKey?: string
  }

  type ThemeProviderState = {
    theme: Theme
    setTheme: (theme: Theme) => void
  }

  const initialState: ThemeProviderState = {
    theme: "system",
    setTheme: () => null
  }

  const ThemeProviderContext = React.createContext<ThemeProviderState>(initialState)

  export function ThemeProvider({
    children,
    defaultTheme = "system",
    storageKey = "vite-ui-theme",
    ...props
  }: ThemeProviderProps) {
    const [theme, setTheme] = useState<Theme>(() => (localStorage.getItem(storageKey) as Theme) || defaultTheme)

    React.useEffect(() => {
      const root = window.document.documentElement

      root.classList.remove("light", "dark")

      if (theme === "system") {
        const systemTheme = window.matchMedia("(prefers-color-scheme: dark)").matches ? "dark" : "light"

        root.classList.add(systemTheme)
        return
      }

      if (theme === "light" || theme === "dark") {
        root.classList.add(theme)
      }
    }, [theme])

    const value = {
      theme,
      setTheme: (newTheme: Theme) => {
        if (newTheme === "light" || newTheme === "dark" || newTheme === "system") {
          localStorage.setItem(storageKey, newTheme)
          setTheme(newTheme)
        }
      }
    }

    return (
      <ThemeProviderContext.Provider {...props} value={value}>
        {children}
      </ThemeProviderContext.Provider>
    )
  }

  export const useTheme = () => {
    const context = React.useContext(ThemeProviderContext)

    if (context === undefined) throw new Error("useTheme must be used within a ThemeProvider")

    return context
  }`} />


## Usage
Then you can wrap your app with the provider. For example if you are using Laravel with Inertia.js, you can put it inside your `app.tsx` like so:

```tsx {5} {9-11}
import React from 'react'
import ReactDOM from 'react-dom/client'
import App from './App.tsx'
import './index.css'
import { ThemeProvider } from './components/theme-provider.tsx'

ReactDOM.createRoot(document.getElementById('root')!).render(
  <React.StrictMode>
    <ThemeProvider>
      <App />
    </ThemeProvider>
  </React.StrictMode>,
)
```

## Theme Switcher

Then for the switcher, you can use the `useTheme` hook to get the current theme.

<Installation options={{ isManual: true }}  items={['justd-icons']} />

<PlainCode code={`import { IconSun, IconMoon } from 'justd-icons'
import { Button } from './ui/button'
import { useTheme } from './theme-provider'

export function ThemeSwitcher() {
  const { theme, setTheme } = useTheme()
  return (
    <Button
      appearance="outline"
      size="square-petite"
      aria-label={'Switch to ' + theme === 'light' ? 'dark' : 'light' + 'mode'}
      onPress={() => setTheme(theme === 'light' ? 'dark' : 'light')}
    >
      <IconSun className="transition-all scale-100 rotate-0 dark:scale-0 dark:-rotate-90 h-[1.2rem] w-[1.2rem]" />
      <IconMoon className="absolute transition-all scale-0 rotate-90 dark:scale-100 dark:rotate-0 h-[1.2rem] w-[1.2rem]" />
    </Button>
    )
}`}/>

If you spot typos or wrong implementations, feel free to [contribute here](https://github.com/irsyadadl/d./blob/main/content/docs/dark-mode/vite.mdx).
